<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/siyah">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="72dp"
        android:gravity="left"
        android:text="@string/oturumac"
        android:textColor="@color/beyaz"
        android:textSize="40dp"/>



    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/txtLogin">


        <EditText
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="14dp"
            android:textColor="@color/beyaz"
            android:id="@+id/email"
            android:layout_below="@id/linear3"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/beyaz"
            android:inputType="textEmailAddress"
            android:hint="@string/eposta"
            android:backgroundTint="@color/siyah"
            android:maxLength="11"/>


    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linear1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/beyaz" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginTop="4dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal"
        android:weightSum="8">


        <EditText
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="14dp"
            android:textColor="@color/beyaz"
            android:id="@+id/sifre"
            android:layout_below="@id/linear3"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/beyaz"
            android:inputType="textPassword"
            android:hint="@string/sifre"
            android:backgroundTint="@color/siyah"/>
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/linear2"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/beyaz" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/linear2"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="48dp"
        android:background="@color/beyaz"
        android:text="@string/girisyap"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:textColor="@color/siyah"/>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:layout_height="32dp"
        android:layout_below="@id/login"
        android:layout_marginTop="8dp"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:textSize="20dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:text="@string/kayitol"
            android:textColor="@color/beyaz" />


    </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>