<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="270dp"
    android:background="@color/siyah"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/iptal"
            android:layout_marginTop="0dp"
            android:layout_gravity="right"
            android:background="@drawable/ic_clear_black_24dp"
            android:layout_width="36dp"
            android:layout_marginLeft="0dp"
            android:layout_height="36dp"/>
        <ImageView
            android:src="@drawable/unlem"
            android:layout_gravity="center"
            android:id="@+id/image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:contentDescription="image" />


    </LinearLayout>
        <TextView
            android:layout_gravity="center"
            android:autoSizeTextType="uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/mesaj"
            android:textSize="15dp" />
    <LinearLayout
        android:background="@color/beyaz"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <Button
            android:background="@color/siyah"
            android:textColor="@android:color/white"
            android:text="@string/sil"
            android:id="@+id/sil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="5dp"/>

        <Button
            android:background="@color/siyah"
            android:textColor="@android:color/white"
            android:id="@+id/guncelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/guncel"
            android:layout_weight="1"
            android:padding="5dp" />
    </LinearLayout>
</LinearLayout>



